# packagedata

./: .gitignore  README.rst  pyproject.toml  tox.ini
packagedata/: __init__.py
test/testpkg/: README.rst  pyproject.toml
test/testpkg/testpkg/: __init__.py
