[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testpkg"
version = "0.1.0"
description = "A test package"
authors = [
    { name="KuraLabs S.R.L", email="info@kuralabs.io" }
]

readme = "README.rst"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.package-data]
"testpkg.data" = ["**/*"]

# Note the quotes around testpkg.plugins in order to escape the dot .
[project.entry-points."testpkg.plugins"]
plugin1 = "testpkg:plugin1"
plugin2 = "testpkg:plugin2"
